Fix MCP server hangs: bypass UI text-buffer for edits with no open editor, add tool-call timeout, move to virtual threads
Root cause of the reported hangs/timeouts under heavy tool usage:
- TextFiles.edit() always routed through ITextFileBufferManager (the
  editor/document model), which contends with the UI thread and
  Eclipse's workspace scheduling rules (builds, other edits) even when
  no editor has the file open — the common case for tool-driven edits.
  It now writes straight through IFile.setContents() when no editor
  buffer exists for the file, falling back to the text-buffer flow
  only when an editor actually has it open (so that editor's content/
  dirty state stays in sync). setContents() still fires a synchronous
  resource-change delta, so JDT indexing/get_compilation_errors see
  the new content immediately, same as the text-buffer commit path.
- McpDispatcher.toolsCall now runs each tool on its own virtual thread
  with a 60s timeout. Some tools genuinely block on Eclipse's
  workspace lock (e.g. a build in progress) — that wait was previously
  unbounded, silently pinning a thread forever and eventually
  starving the whole server. A stuck call now fails loudly instead.
- McpHttpServer's HTTP executor moved from a 4-thread fixed pool to
  one virtual thread per request, so a slow/blocked call no longer
  exhausts a small shared pool and blocks unrelated requests (incl.
  ping) from being served at all.